welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:5: error: reassignment to val
      num=num-i
         ^golomb:3: error: type mismatch;
 found   : Unit
 required: Int
  while (num >0) {
  ^