welcome.lessons.welcome.array.golomb.Golomb.scala.code
def golomb(num:Int): Int = {
  var i = 1
  while (num >0) {
    for (j <-1 to i) {
      num=num-i
    }
    i=1+i
  }
}
  